alter table flashsale_cushops_detail add column carry_scheme int(11) default 0;
alter table flashsale_cushops_detail add column position int(11) default 0;

CREATE INDEX `flashsale_cushops_detail_b2fabe42` ON `flashsale_cushops_detail` (`position`);
CREATE INDEX `flashsale_cushops_detail_3d1f4a2e` ON `flashsale_cushops_detail` (`carry_scheme`);

######## 2016-03-24 #########
alter table pay_coupon_template add column release_start_time datetime;
alter table pay_coupon_template add column release_end_time datetime;
alter table pay_coupon_template add column start_use_time datetime;
alter table pay_coupon_template add column use_pro_category varchar(256);
alter table pay_coupon_template add column release_fee double default 0.0;
alter table pay_coupon_template drop column preset_days;
alter table pay_coupon_template drop column active_days;

######## 2016-03-23 ########

alter table flashsale_activity_entry add share_icon varchar(128) NOT NULL;
alter table flashsale_activity_entry add share_link varchar(256) NOT NULL;

######## 2016-03-22 ########
alter table supplychain_supply_supplier add column ware_by smallint default 1;
alter table flashsale_activity_entry add act_type varchar(8) NOT NULL;
alter table flashsale_activity_entry add extras varchar(5012) NOT NULL default '{}';
alter table flashsale_activity_entry add order_val int(11) NOT NULL;
######## 2016-03-17 ########
alter table supplychain_supply_supplier add column buyer_id int(11) default null references auth_user(id);
######## 2016-03-14 ########
alter table xiaolumm_xiaolumama add column qrcode_link varchar(256) NOT NULL DEFAULT '';
######## 2016-03-09 ########
alter table supplychain_supply_schedule_manage_detail add column is_approved tinyint(1) default 0;
######## 2016-03-07 ########
alter table flashsale_xlmm_fans add column fans_nick varchar(32) default null;
alter table flashsale_xlmm_fans add column fans_thumbnail varchar(256) default null;
######## 2016-03-05 ########