@@ -93,7 +93,6 @@
 }
 .page-relate{
     position:relative;
-    margin-bottom:20px;
 }
 .ads-content{
     position:absolute;
@@ -162,7 +161,7 @@
     <div>{{age_tag.1}}</div>
   </div>
   {% else %}
-  <div class="row">
+  <div class="row" style="margin-bottom:15px;">
     <img class="head-img" src="http://7xogkj.com2.z0.glb.qiniucdn.com/dress_%E7%BB%93%E6%9E%9C-%E5%88%86%E4%BA%AB%E7%BB%99%E5%A5%BD%E5%8F%8B%E5%B0%B1%E8%83%BD%E8%8E%B7%E5%BE%97%E7%BA%A2%E5%8C%85.png" />
   </div>
   {% endif %}
