@@ -15,6 +15,12 @@ alter table flashsale_cushops_detail add column position int(11) default 0;
 CREATE INDEX `flashsale_cushops_detail_b2fabe42` ON `flashsale_cushops_detail` (`position`);
 CREATE INDEX `flashsale_cushops_detail_3d1f4a2e` ON `flashsale_cushops_detail` (`carry_scheme`);
 
+######## 2016-03-27 #########
+alter table flashsale_trade add column has_budget_paid bool NOT NULL default false after payment;
+
+######## 2016-03-26 #########
+alter table flashsale_trade add column pay_cash double precision NOT NULL default 0 after payment;
+
 ######## 2016-03-24 #########
 alter table pay_coupon_template add column release_start_time datetime;
 alter table pay_coupon_template add column release_end_time datetime;
